--- a/projects.html
+++ b/projects.html
@@ -4,18 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forrest's Bio</title>
+    <title>Forrest's Projects</title>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
 
-
-    <script defer src="./components/header.js" type="text/javascript"></script>
-    <script defer src="./build/bundle.js"></script>
+    <script src="./components/header.js" type="text/javascript" defer></script>
 </head>
 <body>
     <header-component></header-component>
-    <main>
-        <h1>index</h1>
-    </main>
-    <footer></footer>
+    <h1>projects</h1>
 </body>
 </html>
