--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-87cd145e.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-7b33820f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-4253c072.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-e40c6eaf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-1b66d90d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-7a6d4846.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-1827a5b0.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-61673952.js">
+		<link href="./_app/immutable/assets/_layout.436dce5f.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page.7b33820f.css" rel="stylesheet">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.b09f3593.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.d9d0aa8f.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.c94e5f7f.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.601849f0.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.dd5a283f.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.c24b7fc2.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/_layout.da46b06b.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_page.svelte.dd01411d.mjs">
 	</head>
 	<body>
 		<div>
@@ -148,22 +149,30 @@
       <button type="submit" class="bg-shadowColor rounded p-1 text-center w-3/4 text-accentColor self-center mt-2 hover:bg-tertiaryColor hover:text-shadowColor font-semibold">Submit</button></form></footer></div>
 
 
-		<script type="module" data-sveltekit-hydrate="19cpd6h">
-			import { start } from "./_app/immutable/start-4253c072.js";
+			
+			<script>
+				{
+					__sveltekit_1jzfwmq = {
+						env: {},
+						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
+						element: document.currentScript.parentElement
+					};
 
-			start({
-				env: {},
-				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="19cpd6h"]').parentNode,
-				version: "1677120046528",
-				hydrate: {
-					node_ids: [0, 2],
-					data: [null,{type:"data",data:{photos:{test:""},features:[{title:"Innovative Solutions",content:"Unlock the power of innovation with a software engineer who brings a unique combination of compassion and problem-solving to the table. With a wealth of experience and a proven track record of managing time, projects, and people. I excel at collaborating with teams to deliver cutting-edge solutions that achieve mission-critical objectives with precision and accuracy. Let me help you drive your technology projects to success.",color:"yellow",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1577209299418-485f60c0d4de?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1069&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1577209299418-485f60c0d4de?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1069&q=80",id:"1"},{title:"Experienced Leadership",content:"Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we'll build and extend your brand in digitial places.",color:"red",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",id:"2"}],services:[{title:"Front End",content:"Front End technologies",colorTheme:"green",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1421789665209-c9b2a435e3dc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1421789665209-c9b2a435e3dc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",id:"1"},{title:"Back End",content:"Back End technologies",colorTheme:"green",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1616683955867-4049d9b78977?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1616683955867-4049d9b78977?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",id:"2"}],projects:[{image:"\u002Fimages\u002Flotr-app.png",content:"We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.",title:"Characters of the Lord of the Rings",technologies:["React"],id:1},{image:"\u002Fimages\u002Fbounty-hunter-app.png",content:"Exercise tracker app with authentication and login. Log in and start tracking workouts and ask questions on the forum. App utilizes React for the front-end, with react-router helping with the different routes, and Node.js\u002FExpress as the backend. MongoDB is used for the database and Mongoose helps with the schema creation and object-document mapper. Authentication is handled using tokens and encryption. App is live with heroku.",title:"Bounty Hunter",technologies:["React","Express.js","Node.js"],id:2},{image:"\u002Fimages\u002Fbooks-weve-read.png",content:"Incredible end result! Oour sales increased over 400% when we worked with Sunnyside. Highly recommended!",title:"Books We've Read Database",technologies:["React","Express.js","Node.js","MongoDB"],id:3},{image:"\u002Fimages\u002Fexercise-tracker.png",content:"Incredible end result! Oour sales increased over 400% when we worked with Sunnyside. Highly recommended!",title:"Exercise Tracker\u002FForum",technologies:["React","Express.js","Node.js","MongoDB"],id:4}],gallery:[{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673766791276-5f46fd720021?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=885&q=80",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673766791276-5f46fd720021?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=885&q=80",alt:"Milk bottles",id:1},{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673560199041-21c35ef9dac1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673560199041-21c35ef9dac1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",alt:"Orange",id:2},{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673412425052-054cac55e735?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDY1fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673412425052-054cac55e735?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDY1fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60",alt:"Cone",id:3},{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1672738575910-821e3289f334?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1672738575910-821e3289f334?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80g",alt:"Sugar cubes",id:4}]},uses:{}}],
-					form: null,
-					error: null
+					const data = [null,{"type":"data","data":{photos:{test:""},features:[{title:"Innovative Solutions",content:"Unlock the power of innovation with a software engineer who brings a unique combination of compassion and problem-solving to the table. With a wealth of experience and a proven track record of managing time, projects, and people. I excel at collaborating with teams to deliver cutting-edge solutions that achieve mission-critical objectives with precision and accuracy. Let me help you drive your technology projects to success.",color:"yellow",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1577209299418-485f60c0d4de?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1069&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1577209299418-485f60c0d4de?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1069&q=80",id:"1"},{title:"Experienced Leadership",content:"Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we'll build and extend your brand in digitial places.",color:"red",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",id:"2"}],services:[{title:"Front End",content:"Front End technologies",colorTheme:"green",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1421789665209-c9b2a435e3dc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1421789665209-c9b2a435e3dc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",id:"1"},{title:"Back End",content:"Back End technologies",colorTheme:"green",mobileImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1616683955867-4049d9b78977?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",desktopImg:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1616683955867-4049d9b78977?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",id:"2"}],projects:[{image:"\u002Fimages\u002Flotr-app.png",content:"We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.",title:"Characters of the Lord of the Rings",technologies:["React"],id:1},{image:"\u002Fimages\u002Fbounty-hunter-app.png",content:"Exercise tracker app with authentication and login. Log in and start tracking workouts and ask questions on the forum. App utilizes React for the front-end, with react-router helping with the different routes, and Node.js\u002FExpress as the backend. MongoDB is used for the database and Mongoose helps with the schema creation and object-document mapper. Authentication is handled using tokens and encryption. App is live with heroku.",title:"Bounty Hunter",technologies:["React","Express.js","Node.js"],id:2},{image:"\u002Fimages\u002Fbooks-weve-read.png",content:"Incredible end result! Oour sales increased over 400% when we worked with Sunnyside. Highly recommended!",title:"Books We've Read Database",technologies:["React","Express.js","Node.js","MongoDB"],id:3},{image:"\u002Fimages\u002Fexercise-tracker.png",content:"Incredible end result! Oour sales increased over 400% when we worked with Sunnyside. Highly recommended!",title:"Exercise Tracker\u002FForum",technologies:["React","Express.js","Node.js","MongoDB"],id:4}],gallery:[{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673766791276-5f46fd720021?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=885&q=80",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673766791276-5f46fd720021?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=885&q=80",alt:"Milk bottles",id:1},{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673560199041-21c35ef9dac1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673560199041-21c35ef9dac1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80",alt:"Orange",id:2},{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673412425052-054cac55e735?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDY1fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1673412425052-054cac55e735?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDY1fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60",alt:"Cone",id:3},{desktopImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1672738575910-821e3289f334?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80",mobileImagePath:"https:\u002F\u002Fimages.unsplash.com\u002Fphoto-1672738575910-821e3289f334?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80g",alt:"Sugar cubes",id:4}]},"uses":{}}];
+
+					Promise.all([
+						import("./_app/immutable/entry/start.b09f3593.mjs"),
+						import("./_app/immutable/entry/app.601849f0.mjs")
+					]).then(([kit, app]) => {
+						kit.start(app, __sveltekit_1jzfwmq.element, {
+							node_ids: [0, 2],
+							data,
+							form: null,
+							error: null
+						});
+					});
 				}
-			});
-		</script>
-	</div>
+			</script>
+		</div>
 	</body>
 </html>
