--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.436dce5f.css" rel="stylesheet">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.b09f3593.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.a9e92ec9.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.d9d0aa8f.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.c94e5f7f.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.601849f0.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.3e616223.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.9e4a22fe.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.dd5a283f.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.c24b7fc2.mjs">
 		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
@@ -58,7 +58,7 @@
 			
 			<script>
 				{
-					__sveltekit_1jzfwmq = {
+					__sveltekit_zwj1ng = {
 						env: {},
 						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
 						element: document.currentScript.parentElement
@@ -67,10 +67,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.b09f3593.mjs"),
-						import("./_app/immutable/entry/app.601849f0.mjs")
+						import("./_app/immutable/entry/start.a9e92ec9.mjs"),
+						import("./_app/immutable/entry/app.9e4a22fe.mjs")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1jzfwmq.element, {
+						kit.start(app, __sveltekit_zwj1ng.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
