--- a/projects.html
+++ b/projects.html
@@ -2,19 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/forrest-s.github.io/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.436dce5f.css" rel="stylesheet">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/start.a9e92ec9.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.d9d0aa8f.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/singletons.3e616223.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/app.9e4a22fe.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.svelte.dd5a283f.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/index.c24b7fc2.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/_layout.js.fb1865a6.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/chunks/_layout.da46b06b.mjs">
-		<link rel="preload" as="script" crossorigin="anonymous" href="./_app/immutable/entry/projects-page.svelte.4a24512f.mjs">
+		<link href="/forrest-s.github.io/application/immutable/assets/_layout.436dce5f.css" rel="stylesheet">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/entry/start.7b26cceb.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/chunks/index.d9d0aa8f.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/chunks/singletons.a5039e8d.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/chunks/paths.fb536807.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/entry/app.20abd026.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/entry/_layout.svelte.562e9e2a.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/chunks/index.c24b7fc2.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/entry/_layout.js.fb1865a6.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/chunks/_layout.da46b06b.mjs">
+		<link rel="preload" as="script" crossorigin="anonymous" href="/forrest-s.github.io/application/immutable/entry/projects-page.svelte.4a24512f.mjs">
 	</head>
 	<body>
 		<div>
@@ -23,14 +24,14 @@
 
 
 <div><nav id="navbar" class="z-50 flex flex-col items-center absolute top-0 left-0 gutter w-full xl:top-4"><div class="flex items-center justify-between w-full py-6 lg:px-8">
-    <div><a href="/" class="text-[#163A37] font-black text-2xl md:text-4xl tracking-wide">Forrest S
+    <div><a href="/forrest-s.github.io" class="text-[#163A37] font-black text-2xl md:text-4xl tracking-wide">Forrest S
       </a></div>
     
     <div class="transition-all md:hidden  svelte-1vjugqk"></div>
-    <ul class="hidden md:flex items-center space-x-10 text-primaryColor font-medium text-lg"><li><a href="/">About</a></li>
-      <li><a href="/">Knowledge</a></li>
-      <li><a href="/">Projects</a></li>
-      <button class="bg-secondaryColor py-3 px-7 text-textColor rounded-full uppercase border-0 font-medium"><a href="/">Contact</a></button></ul></div>
+    <ul class="hidden md:flex items-center space-x-10 text-primaryColor font-medium text-lg"><li><a href="/forrest-s.github.io">About</a></li>
+      <li><a href="/forrest-s.github.io">Knowledge</a></li>
+      <li><a href="/forrest-s.github.io">Projects</a></li>
+      <button class="bg-secondaryColor py-3 px-7 text-textColor rounded-full uppercase border-0 font-medium"><a href="/forrest-s.github.io">Contact</a></button></ul></div>
 
   
   
@@ -58,19 +59,19 @@
 			
 			<script>
 				{
-					__sveltekit_zwj1ng = {
+					__sveltekit_1jkou8j = {
 						env: {},
-						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
+						assets: "/forrest-s.github.io",
 						element: document.currentScript.parentElement
 					};
 
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a9e92ec9.mjs"),
-						import("./_app/immutable/entry/app.9e4a22fe.mjs")
+						import("/forrest-s.github.io/application/immutable/entry/start.7b26cceb.mjs"),
+						import("/forrest-s.github.io/application/immutable/entry/app.20abd026.mjs")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_zwj1ng.element, {
+						kit.start(app, __sveltekit_1jkou8j.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
