--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./application/immutable/assets/_page.2c7c3faf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./application/immutable/entry/start.ea7631dc.js">
-		<link rel="modulepreload" href="./application/immutable/chunks/index.f98f3a93.js">
-		<link rel="modulepreload" href="./application/immutable/chunks/singletons.f27139e1.js">
-		<link rel="modulepreload" href="./application/immutable/entry/app.1dcb546b.js">
-		<link rel="modulepreload" href="./application/immutable/entry/layout.svelte.0516b5fe.js">
-		<link rel="modulepreload" href="./application/immutable/entry/_layout.js.984db11e.js">
-		<link rel="modulepreload" href="./application/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./application/immutable/entry/_page.svelte.60815263.js">
+		<link href="./_app/immutable/assets/_page.2c7c3faf.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.34cc70aa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.f98f3a93.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c99281a9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1f9d94a4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/layout.svelte.0516b5fe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.9a8e96a4.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -26,7 +26,7 @@
 			
 			<script>
 				{
-					__sveltekit_5mwisz = {
+					__sveltekit_19loiyc = {
 						env: {},
 						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
 						element: document.currentScript.parentElement
@@ -35,10 +35,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./application/immutable/entry/start.ea7631dc.js"),
-						import("./application/immutable/entry/app.1dcb546b.js")
+						import("./_app/immutable/entry/start.34cc70aa.js"),
+						import("./_app/immutable/entry/app.1f9d94a4.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_5mwisz.element, {
+						kit.start(app, __sveltekit_19loiyc.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
