--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_page.2c7c3faf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.34cc70aa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5240410d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.f98f3a93.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c99281a9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1f9d94a4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d59f6129.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.4d3fa18e.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/layout.svelte.0516b5fe.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
@@ -26,7 +26,7 @@
 			
 			<script>
 				{
-					__sveltekit_19loiyc = {
+					__sveltekit_1opu6mw = {
 						env: {},
 						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
 						element: document.currentScript.parentElement
@@ -35,10 +35,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.34cc70aa.js"),
-						import("./_app/immutable/entry/app.1f9d94a4.js")
+						import("./_app/immutable/entry/start.5240410d.js"),
+						import("./_app/immutable/entry/app.4d3fa18e.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_19loiyc.element, {
+						kit.start(app, __sveltekit_1opu6mw.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
