--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/forrest-s.github.io/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./application/immutable/assets/_page.2c7c3faf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./application/immutable/entry/start.cf498344.js">
-		<link rel="modulepreload" href="./application/immutable/chunks/index.f98f3a93.js">
-		<link rel="modulepreload" href="./application/immutable/chunks/singletons.2bc82a24.js">
-		<link rel="modulepreload" href="./application/immutable/entry/app.5795f433.js">
-		<link rel="modulepreload" href="./application/immutable/entry/layout.svelte.0516b5fe.js">
-		<link rel="modulepreload" href="./application/immutable/entry/_layout.js.984db11e.js">
-		<link rel="modulepreload" href="./application/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./application/immutable/entry/_page.svelte.60815263.js">
+		<link href="/forrest-s.github.io/application/immutable/assets/_page.2c7c3faf.css" rel="stylesheet">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/start.b228eaca.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/chunks/index.f98f3a93.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/chunks/singletons.f5afebda.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/app.71bce3c6.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/layout.svelte.0516b5fe.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/_layout.js.984db11e.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/_page.svelte.60815263.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -26,19 +26,19 @@
 			
 			<script>
 				{
-					__sveltekit_170qe7q = {
+					__sveltekit_1aj54wi = {
 						env: {},
-						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
+						assets: "/forrest-s.github.io",
 						element: document.currentScript.parentElement
 					};
 
 					const data = [null,null];
 
 					Promise.all([
-						import("./application/immutable/entry/start.cf498344.js"),
-						import("./application/immutable/entry/app.5795f433.js")
+						import("/forrest-s.github.io/application/immutable/entry/start.b228eaca.js"),
+						import("/forrest-s.github.io/application/immutable/entry/app.71bce3c6.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_170qe7q.element, {
+						kit.start(app, __sveltekit_1aj54wi.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
