--- a/index.html
+++ b/index.html
@@ -2,43 +2,43 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/forrest-s.github.io/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./application/immutable/assets/_page.2c7c3faf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./application/immutable/entry/start.8fc59394.js">
-		<link rel="modulepreload" href="./application/immutable/chunks/index.f98f3a93.js">
-		<link rel="modulepreload" href="./application/immutable/chunks/singletons.432e42fd.js">
-		<link rel="modulepreload" href="./application/immutable/entry/app.77e0e424.js">
-		<link rel="modulepreload" href="./application/immutable/entry/layout.svelte.0516b5fe.js">
-		<link rel="modulepreload" href="./application/immutable/entry/_layout.js.984db11e.js">
-		<link rel="modulepreload" href="./application/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./application/immutable/entry/_page.svelte.60815263.js">
+		<link href="/forrest-s.github.io/_app/immutable/assets/_page.3b3bc37c.css" rel="stylesheet">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/start.d297e39d.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/index.f98f3a93.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/singletons.573d8faa.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/app.62cea517.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/layout.svelte.0516b5fe.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/_layout.js.984db11e.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/_page.svelte.f51b3316.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
 <h1>Welcome to SvelteKit</h1>
-<p class="svelte-zuosmv">Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
+<p class="svelte-15hkehb">Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
 
 
 			
 			<script>
 				{
-					__sveltekit_1dithi2 = {
+					__sveltekit_y9xugq = {
 						env: {},
-						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
+						assets: "/forrest-s.github.io",
 						element: document.currentScript.parentElement
 					};
 
 					const data = [null,null];
 
 					Promise.all([
-						import("./application/immutable/entry/start.8fc59394.js"),
-						import("./application/immutable/entry/app.77e0e424.js")
+						import("/forrest-s.github.io/_app/immutable/entry/start.d297e39d.js"),
+						import("/forrest-s.github.io/_app/immutable/entry/app.62cea517.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1dithi2.element, {
+						kit.start(app, __sveltekit_y9xugq.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
