--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="/forrest-s.github.io/_app/immutable/assets/_page.3b3bc37c.css" rel="stylesheet">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/start.d297e39d.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/start.c7b2f6ae.js">
 		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/index.f98f3a93.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/singletons.573d8faa.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/app.62cea517.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/singletons.21838e61.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/app.834c8d44.js">
 		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/layout.svelte.0516b5fe.js">
 		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/_layout.da46b06b.js">
@@ -26,7 +26,7 @@
 			
 			<script>
 				{
-					__sveltekit_y9xugq = {
+					__sveltekit_1r17v0z = {
 						env: {},
 						assets: "/forrest-s.github.io",
 						element: document.currentScript.parentElement
@@ -35,10 +35,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/forrest-s.github.io/_app/immutable/entry/start.d297e39d.js"),
-						import("/forrest-s.github.io/_app/immutable/entry/app.62cea517.js")
+						import("/forrest-s.github.io/_app/immutable/entry/start.c7b2f6ae.js"),
+						import("/forrest-s.github.io/_app/immutable/entry/app.834c8d44.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_y9xugq.element, {
+						kit.start(app, __sveltekit_1r17v0z.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
