--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="/forrest-s.github.io/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="/forrest-s.github.io/_app/immutable/assets/_page.3b3bc37c.css" rel="stylesheet">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/start.e4c8866e.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/index.f98f3a93.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/singletons.3deb1c0c.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/app.71e4d9e5.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/layout.svelte.0516b5fe.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/_layout.js.984db11e.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/_page.svelte.f51b3316.js">
+		<link href="/forrest-s.github.io/application/immutable/assets/_page.3b3bc37c.css" rel="stylesheet">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/start.fe5413ad.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/chunks/index.f98f3a93.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/chunks/singletons.03f03ed4.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/app.dcf2efc7.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/layout.svelte.0516b5fe.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/_layout.js.984db11e.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="/forrest-s.github.io/application/immutable/entry/_page.svelte.f4a3703d.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -26,7 +26,7 @@
 			
 			<script>
 				{
-					__sveltekit_vkiefr = {
+					__sveltekit_14tsknz = {
 						env: {},
 						assets: "/forrest-s.github.io",
 						element: document.currentScript.parentElement
@@ -35,10 +35,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/forrest-s.github.io/_app/immutable/entry/start.e4c8866e.js"),
-						import("/forrest-s.github.io/_app/immutable/entry/app.71e4d9e5.js")
+						import("/forrest-s.github.io/application/immutable/entry/start.fe5413ad.js"),
+						import("/forrest-s.github.io/application/immutable/entry/app.dcf2efc7.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_vkiefr.element, {
+						kit.start(app, __sveltekit_14tsknz.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
