--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/forrest-s.github.io/favicon.png" />
+		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="/forrest-s.github.io/_app/immutable/assets/_page.3b3bc37c.css" rel="stylesheet">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/start.2014e11e.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/index.f98f3a93.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/singletons.e3f1e104.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/app.c2dc5b1e.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/layout.svelte.0516b5fe.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/_layout.js.984db11e.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="/forrest-s.github.io/_app/immutable/entry/_page.svelte.f51b3316.js">
+		<link href="./_app/immutable/assets/_page.3b3bc37c.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.d1662f83.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.f98f3a93.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3ce7781f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.11af327e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/layout.svelte.0516b5fe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.f51b3316.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -26,19 +26,19 @@
 			
 			<script>
 				{
-					__sveltekit_1m18312 = {
+					__sveltekit_z7r5f9 = {
 						env: {},
-						assets: "/forrest-s.github.io",
+						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
 						element: document.currentScript.parentElement
 					};
 
 					const data = [null,null];
 
 					Promise.all([
-						import("/forrest-s.github.io/_app/immutable/entry/start.2014e11e.js"),
-						import("/forrest-s.github.io/_app/immutable/entry/app.c2dc5b1e.js")
+						import("./_app/immutable/entry/start.d1662f83.js"),
+						import("./_app/immutable/entry/app.11af327e.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1m18312.element, {
+						kit.start(app, __sveltekit_z7r5f9.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
