--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_page.3b3bc37c.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.d1662f83.js">
+		<link href="./_app/immutable/assets/_page.73f020c9.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.7dec7669.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.f98f3a93.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3ce7781f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.11af327e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f8b5c120.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.2e9aa3a7.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/layout.svelte.0516b5fe.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.f51b3316.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.9ad0bc04.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
 <h1>Welcome to SvelteKit</h1>
-<p class="svelte-15hkehb">Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
+<p class="svelte-1nr0x8w">Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
 
 
 			
 			<script>
 				{
-					__sveltekit_z7r5f9 = {
+					__sveltekit_xo2cb4 = {
 						env: {},
 						assets: new URL(".", location.href).pathname.replace(/^\/$/, ''),
 						element: document.currentScript.parentElement
@@ -35,10 +35,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.d1662f83.js"),
-						import("./_app/immutable/entry/app.11af327e.js")
+						import("./_app/immutable/entry/start.7dec7669.js"),
+						import("./_app/immutable/entry/app.2e9aa3a7.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_z7r5f9.element, {
+						kit.start(app, __sveltekit_xo2cb4.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
